--- a/exercises/solutions/05_strings_solutions.ipynb
+++ b/exercises/solutions/05_strings_solutions.ipynb
@@ -49,6 +49,56 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**a)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ord = input(\"Mata in ett ord: \")                               # låt användaren mata in ett ord\n",
+        "\n",
+        "antal_bokstaver = len(ord)                                     # räkna antalet bokstäver i användares ord\n",
+        "\n",
+        "print(f'Antal bokstäver i ditt ord: {antal_bokstaver}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**b)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ord = input(\"Mata in ett ord: \")          # låt användaren mata in ett ord\n",
+        "\n",
+        "antal_stora_bokstaver = 0\n",
+        "antal_små_bokstaver = 0\n",
+        "\n",
+        "for bokstav in ord:                       # gå igenom varje bokstav i ordet\n",
+        "\n",
+        "    if bokstav.isupper():                 \n",
+        "        antal_stora_bokstaver += 1\n",
+        "    elif bokstav.islower():\n",
+        "        antal_små_bokstaver += 1\n",
+        "\n",
+        "\n",
+        "print(f'Antal små bokstäver   : {antal_små_bokstaver}')\n",
+        "print(f'Antal stora bokstäver : {antal_stora_bokstaver}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "ubDgfpYrQhJe"
       },
@@ -68,6 +118,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sentence = \"A picture says more than a thousand words, a matematical formula says more than a thousand pictures.\"\n",
+        "\n",
+        "word_list = sentence.split(' ')                     # splitta meningen på varje mellanslag, och lägg in resultatet i en lista\n",
+        "\n",
+        "print(word_list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# nu behöver vi endast räkna längden på den listan, för att få antal ord i vår mening\n",
+        "\n",
+        "sentence_length = len(word_list)\n",
+        "\n",
+        "print(f'Meningen har {sentence_length} ord.')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "ZqvDvKPRQhJe"
@@ -82,6 +158,26 @@
         "- bjkjb\n",
         "\n",
         "Let the user input a sequence of characters and check if it is a palindrome. (*)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sekvens = input('Mata in en sekvens av tecken: ')                           # låt användaren mata in en sekvens av tecken\n",
+        "\n",
+        "sekvens_utan_mellanslag = sekvens.replace(' ', '')                          # Genom att använda replace() kan vi välja att ersätta alla mellanrum men tomrum i vår sekvens\n",
+        "\n",
+        "omvänd_sekvens = sekvens_utan_mellanslag[::-1]                              # Skapa en omvänd version av vår sekvens, att jämföra med\n",
+        "\n",
+        "\n",
+        "if sekvens_utan_mellanslag == omvänd_sekvens:                               # Kontrollera om den ursprungliga sekvensen är\n",
+        "    print(f\"'{sekvens}' är ett palindrom.\")\n",
+        "    \n",
+        "else:\n",
+        "    print(f\"'{sekvens}' är inte ett palindrom.\")"
       ]
     },
     {
@@ -108,6 +204,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "mening = \"Pure mathematics is, in its way, the poetry of logical ideas\"\n",
+        "\n",
+        "mening = mening.lower()                                  # konvertera meningen till små bokstäver för att förenkla jämförelsen\n",
+        "\n",
+        "vokaler = ['a', 'e', 'i', 'o', 'u', 'y']                 # skapa en lista med vokaler\n",
+        "\n",
+        "antal_vokaler = 0\n",
+        "antal_konsonanter = 0\n",
+        "\n",
+        "\n",
+        "for tecken in mening:                                    # gå igenom varje tecken i meningen\n",
+        "\n",
+        "    if tecken in vokaler:\n",
+        "        antal_vokaler += 1\n",
+        "\n",
+        "    else:\n",
+        "        antal_konsonanter +=1\n",
+        "\n",
+        "print(f'Antal vokaler i meningen är      : {antal_vokaler}')\n",
+        "print(f'Antal konsonanter i meningen är  : {antal_konsonanter}')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "YCkksJpfQhJe"
@@ -126,6 +250,161 @@
         "\n",
         "&nbsp; c) &nbsp; let the user choose either encryption or decryption."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "alfabet = 'abcdefghijklmnopqrstuvxyz'\n",
+        "\n",
+        "# Notera att vi kommer åt de olika bokstäverna i strängen ovan genom att använda index (samma som för listor)\n",
+        "\n",
+        "print(alfabet[0])\n",
+        "print(alfabet[1])\n",
+        "print(alfabet[2])\n",
+        "\n",
+        "# vill vi hitta index för exempelvis bokstaven m kan vi göra det med find() metoden\n",
+        "\n",
+        "index_for_m = alfabet.find('m')\n",
+        "\n",
+        "print(f'Indexet för m är {index_for_m}')\n",
+        "\n",
+        "# kontrollera att det stämmer\n",
+        "\n",
+        "print(alfabet[index_for_m])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**a)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ord_att_kryptera = input('Vilket ord vill du kryptera? Skriv endast med små bokstäver: ')\n",
+        "\n",
+        "krypterat_ord = ''                                                                     # börja med en tom sträng, som vi sedan kommer göra till vårt krypterade ord\n",
+        "\n",
+        "for index, bokstav in enumerate(ord_att_kryptera):                                     # gå igenom varje bokstav i ordet\n",
+        "        \n",
+        "    if bokstav != 'z':                                                                 # utför denna kod om nuvarande bokstav inte är x\n",
+        "\n",
+        "        bokstavens_index_i_alfabetet = alfabet.find(bokstav)                           # hitta index i alfabetet, av den nuvarande bokstaven\n",
+        "\n",
+        "        krypterat_ord += alfabet[bokstavens_index_i_alfabetet+1]                       # lägg till efterföljande bokstav i vårt krypterade ord\n",
+        "\n",
+        "    else:                                                                              # utför om nuvarande bokstav är z\n",
+        "        \n",
+        "        krypterat_ord += alfabet[0]                                                    # lägg till ett a\n",
+        "\n",
+        "print(f'Krypterade versionen av {ord_att_kryptera} är {krypterat_ord}')\n",
+        "        "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**b)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "ord_att_dekryptera = input('Vilket ord vill du dekryptera? Skriv endast med små bokstäver: ')\n",
+        "\n",
+        "dekrypterat_ord = ''                                                                   # börja med en tom sträng, som vi sedan kommer göra till vårt dekrypterade ord\n",
+        "\n",
+        "for index, bokstav in enumerate(ord_att_dekryptera):                                   # gå igenom varje bokstav i ordet\n",
+        "        \n",
+        "    if bokstav != 'a':                                                                 # utför denna kod om nuvarande bokstav inte är x\n",
+        "\n",
+        "        bokstavens_index_i_alfabetet = alfabet.find(bokstav)                           # hitta index i alfabetet, av den nuvarande bokstaven\n",
+        "\n",
+        "        dekrypterat_ord += alfabet[bokstavens_index_i_alfabetet - 1]                   # lägg till efterföljande bokstav i vårt krypterade ord\n",
+        "\n",
+        "    else:                                                                              # utför om nuvarande bokstav är a\n",
+        "        \n",
+        "        dekrypterat_ord += alfabet[-1]                                                 # lägg till ett z  \n",
+        "\n",
+        "print(f'Krypterade versionen av {ord_att_dekryptera} är {dekrypterat_ord}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**c)**\n",
+        "\n",
+        "För att lösa den här lägger vi in allt ovan under en enda if-else sats"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "intention = input('Vill du (K)ryptera eller (D)ekryptera? Svara K eller D: ')\n",
+        "\n",
+        "if intention == 'K':               # utför lösningen i a) om använder väljer att kryptera\n",
+        "\n",
+        "    ord_att_kryptera = input('Vilket ord vill du kryptera? Skriv endast med små bokstäver: ')\n",
+        "\n",
+        "    krypterat_ord = ''                                                                     # börja med en tom sträng, som vi sedan kommer göra till vårt krypterade ord\n",
+        "\n",
+        "    for index, bokstav in enumerate(ord_att_kryptera):                                     # gå igenom varje bokstav i ordet\n",
+        "        \n",
+        "        if bokstav != 'z':                                                                 # utför denna kod om nuvarande bokstav inte är x\n",
+        "\n",
+        "            bokstavens_index_i_alfabetet = alfabet.find(bokstav)                           # hitta index i alfabetet, av den nuvarande bokstaven\n",
+        "\n",
+        "            krypterat_ord += alfabet[bokstavens_index_i_alfabetet+1]                       # lägg till efterföljande bokstav i vårt krypterade ord\n",
+        "\n",
+        "        else:                                                                              # utför om nuvarande bokstav är z\n",
+        "        \n",
+        "            krypterat_ord += alfabet[0]                                                    # lägg till ett a\n",
+        "\n",
+        "    print(f'Krypterade versionen av {ord_att_kryptera} är {krypterat_ord}')\n",
+        "\n",
+        "elif intention == 'D':              # utför lösningen i a) om använder väljer att kryptera\n",
+        "\n",
+        "    ord_att_dekryptera = input('Vilket ord vill du dekryptera? Skriv endast med små bokstäver: ')\n",
+        "\n",
+        "    dekrypterat_ord = ''                                                                   # börja med en tom sträng, som vi sedan kommer göra till vårt dekrypterade ord\n",
+        "\n",
+        "    for index, bokstav in enumerate(ord_att_dekryptera):                                   # gå igenom varje bokstav i ordet\n",
+        "        \n",
+        "        if bokstav != 'a':                                                                 # utför denna kod om nuvarande bokstav inte är x\n",
+        "\n",
+        "            bokstavens_index_i_alfabetet = alfabet.find(bokstav)                           # hitta index i alfabetet, av den nuvarande bokstaven\n",
+        "\n",
+        "            dekrypterat_ord += alfabet[bokstavens_index_i_alfabetet - 1]                   # lägg till efterföljande bokstav i vårt krypterade ord\n",
+        "\n",
+        "        else:                                                                              # utför om nuvarande bokstav är a\n",
+        "        \n",
+        "            dekrypterat_ord += alfabet[-1]                                                 # lägg till ett z  \n",
+        "\n",
+        "    print(f'Krypterade versionen av {ord_att_dekryptera} är {dekrypterat_ord}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -148,7 +427,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.11.4"
     },
     "vscode": {
       "interpreter": {
