--- a/code_alongs/L03_for_statement.ipynb
+++ b/code_alongs/L03_for_statement.ipynb
@@ -223,6 +223,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "___\n",
+    "\n",
+    "## For-break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Precis om att if-elif-else samt while-break är kompanjoner, är for och break också kompanjoner\n",
+    "\n",
+    "Om Python någon gång under en for-loop stöter på break, så avbryter den och hoppar ur loopen - oavsett om det loopen skulle kunna gå vidare\n",
+    "\n",
+    "Exempel:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "veckodagar = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday','Saturday', 'Sunday']\n",
+    "\n",
+    "for veckodag in veckodagar:\n",
+    "\n",
+    "    print(veckodag)\n",
+    "\n",
+    "    if veckodag == 'Friday':                 # när veckodag antar värdet Friday..\n",
+    "        break                                # .. ser Python denna break, och skippar resten av loopen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "___"
    ]
   },
