--- a/code_alongs/L05_strings.ipynb
+++ b/code_alongs/L05_strings.ipynb
@@ -3,53 +3,63 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/aleylani/Python/blob/main/Lecture_notes/L5_strings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "l4vzc0A1VKlT"
-      },
-      "source": [
-        "---\n",
-        "# Lecture notes - strings\n",
-        "\n",
-        "---\n",
-        "This is the lecture note for **strings**, but it's built upon contents from previous lectures such as:\n",
-        "- input-output\n",
-        "- variables\n",
-        "- if-statement\n",
-        "- for loop\n",
-        "- while\n",
-        "- lists\n",
-        "- random\n",
-        "\n",
-        "strings are arrays of bytes that represents unicode characters\n",
-        "\n",
-        "<p class = \"alert alert-info\" role=\"alert\"><b>Note</b> that this lecture note gives a brief introduction to strings. I encourage you to read further about strings, when there is some functionality that you need.  \n",
-        "\n",
-        "Read more [w3schools - strings](https://www.w3schools.com/python/python_strings.asp)\n",
-        "\n",
-        "---"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "6uSf0BFgVKlV"
       },
       "source": [
-        "## Concatenate strings"
+        "## Lägg ihop strängar till varandra"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Additions-operatorn fungerar även för stringar, och Python tolkar en addition av strängar på följande sätt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ali Leylani\n"
+          ]
+        }
+      ],
+      "source": [
+        "firstname = 'Ali'\n",
+        "lastname = 'Leylani'\n",
+        "\n",
+        "# noterar att vi här adderar tre strängar: strängen firstname, strängen mellanslag och strängen lastname\n",
+        "fullname = firstname + ' ' + lastname \n",
+        "\n",
+        "print(fullname)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---\n",
+        "\n",
+        "## Text på flera rader"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Vill vi skriva text på flera rader behöver vi markera detta för Python, och det gör vi genom att inkludera hela texten inom '''. \n",
+        "\n",
+        "För vanliga one-line strängar brukar ju vi inkludera texten i en enda '. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "4-37tOYEVKlV",
         "outputId": "2db41d42-2ab1-4094-bb4f-5134ff18cfb7"
@@ -60,32 +70,32 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Name: Ali Leylani\n",
-            "School: IT-Högskolan\n",
-            "Adress: Ebbe Lieberathsgatan 18C, 412 65 Göteborg\n",
-            "Phone: 112\n",
+            "Namn:       Ali Leylani\n",
+            "Ålder:      33\n",
+            "Profession: AI Expert\n",
+            "Adress:     Norra Parkpromenaden 23\n",
             "\n"
           ]
         }
       ],
       "source": [
-        "firstname = \"Ali\"\n",
-        "lastname = \"Leylani\"\n",
+        "firstname = 'Ali'\n",
+        "lastname = 'Leylani'\n",
+        "age = 33\n",
+        "profession = 'AI Expert'\n",
+        "adress = 'Norra Parkpromenaden 23'\n",
         "\n",
-        "fullname = firstname + \" \" + lastname # concatenating strings\n",
-        "school = \"IT-Högskolan\"\n",
-        "address = \"Ebbe Lieberathsgatan 18C, 412 65 Göteborg\"\n",
-        "phone = \"112\"\n",
+        "fullname = 'Ali' + ' ' + 'Leylani'\n",
         "\n",
-        "# multiline f-string\n",
-        "contact_details = f\"\"\"\n",
-        "Name: {fullname}\n",
-        "School: {school}\n",
-        "Adress: {address}\n",
-        "Phone: {phone}\n",
+        "# f-string på flera rader\n",
+        "personal_details = f\"\"\"\n",
+        "Namn:       {fullname}\n",
+        "Ålder:      {age}\n",
+        "Profession: {profession}\n",
+        "Adress:     {adress}\n",
         "\"\"\"\n",
         "\n",
-        "print(contact_details)"
+        "print(personal_details)"
       ]
     },
     {
@@ -95,24 +105,45 @@
       },
       "source": [
         "---\n",
-        "### Concatenate with loop"
+        "### zip()-funktionen"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Ibland vill man 'klistra ihop' elementen ur två listor, i den ordningen de dyker upp i respektive lista. Det kan vi göra på följande sätt"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "jOZYIsD_VKlW"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Veckomeny\n",
+            "Må: Chili sin carne \n",
+            "Ti: Nudlar \n",
+            "On: Pokebowl \n",
+            "To: Pannkakor \n",
+            "Fr: Tacos \n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "bamba = [\"Chili sin carne\", \"Nudlar\", \"Pokebowl\", \"Pannkakor\", \"Tacos\"]\n",
+        "meny = [\"Chili sin carne\", \"Nudlar\", \"Pokebowl\", \"Pannkakor\", \"Tacos\"]\n",
         "days = [\"Må\", \"Ti\", \"On\", \"To\", \"Fr\"]\n",
         "\n",
-        "menu = \"Veckomeny\\n\" # \\n gives newline\n",
+        "menu = \"Veckomeny\\n\" # print-funktionen skriver ut en extra ny rad när den ser \\n i en sträng\n",
         "\n",
-        "for day, food in zip(days, bamba):\n",
-        "    menu += f\"{day}: {food} \\n\"\n",
+        "for day, food in zip(days, meny):         \n",
+        "    menu += f'{day}: {food} \\n'            # lägg märkte till att vi adderar detta värde till vår sträng menu, och att ytterligare en ny rad \\n inkluderas efter varje addition\n",
         "\n",
         "print(menu)\n"
       ]
@@ -132,20 +163,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Precis som med listor, kan vi komma åt individuella karaktärer i en sträng genom att använda dess index (vilket motsvarar positionen i strängen)"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "TnQo8BuWVKlX"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "quote[0]               : !\n",
+            "quote[5:10]            : e - i\n",
+            "quote[-4]              : T\n",
+            "quote[-4:]             : True\n",
+            "Backwards quote[::-1]  : eurT s'ti esuaceb ynnuf s'ti - eslaF!\n"
+          ]
+        }
+      ],
       "source": [
-        "# note the different types of quotes, can't use '' for denoting string here, as ' is already used\n",
-        "quote = \"!False - it's funny because it's True\"\n",
-        "print(f\"quote[0]: {quote[0]}\")\n",
-        "print(f\"quote[5]: {quote[5:10]}\") # [start:end-1]\n",
-        "print(f\"quote[-4]: {quote[-4]}\") # indexing starting from the end\n",
-        "print(f\"quote[-4:]: {quote[-4:]}\") # slice from -4 to the end\n",
-        "print(f\"Backwards quote[::-1]: {quote[::-1]}\") # reversing"
+        "# Notera att vi måste vara försiktiga med vilka citat-tecken vi använder. I vår text använder vi redan ', och måste därför använda \" som yttre citattecken\n",
+        "\n",
+        "quote = \"!False - it's funny because it's True\"   # kolla hur vi använt citat-tecken här!\n",
+        "\n",
+        "print(f\"quote[0]               : {quote[0]}\")\n",
+        "print(f\"quote[5:10]            : {quote[5:10]}\")                # [start:end-1]\n",
+        "print(f\"quote[-4]              : {quote[-4]}\")                  # räkna index baklänges\n",
+        "print(f\"quote[-4:]             : {quote[-4:]}\")                 # slica från -4 till end\n",
+        "print(f\"Backwards quote[::-1]  : {quote[::-1]}\")                # reversing"
       ]
     },
     {
@@ -155,47 +207,104 @@
       },
       "source": [
         "---\n",
-        "## Split a string\n",
-        "- splitting a string\n"
+        "## split()\n"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "aWhvU3U1VKlY"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
-        "subjects = \"Math, biology  ,   cHeMistry  ,  PrOgramming      \"\n",
-        "subjects = subjects.split(\",\") # argument defines the pattern which the string should be splitted\n",
+        "split-funktionen är grymt händig när man vill dela upp sin sträng baserat på ett visst mönster.\n",
         "\n",
-        "subjects = [subject.strip().upper() for subject in subjects] # strips and make uppercase\n",
+        "Exempel:\n",
         "\n",
-        "for subject in subjects:\n",
-        "    print(f\"{subject} has {len(subject)} letters\")\n",
-        "    # len() returns the number of items, for a string it returns the number of characters"
+        "Vi vi dela upp vår sträng vid varje kommatecken ,"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Math', 'biology', '  cHeMistry  ', '  PrOgramming      ']\n"
+          ]
+        }
+      ],
+      "source": [
+        "subjects = 'Math,biology,  cHeMistry  ,  PrOgramming      '\n",
+        "\n",
+        "# vi väljer här att splitt strängen på kommateckan, men du kan välja att splitta på vad du vill\n",
+        "subjects_splitted = subjects.split(\",\")\n",
+        "\n",
+        "print(subjects_splitted)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Observera noga resultatet ovan! Vi fick en lista där varje element är resultatet från att ha delat vår sträng på kommatecken"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## En applikation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Låt användaren ange ett par tal, som vi sedan vill beräkna medelvärdet av"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**Medelvärde av input**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
       "metadata": {
         "id": "Ylt_qR7xVKla"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Efter vår split assignades variabeln numbers följande lista: ['5', '10', '30']\n",
+            "Medelvärdet av dina tal är 5.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# mean from input\n",
-        "numbers = input(\"Ange några tal separerade med mellanslag: \").split()\n",
-        "numbers = [float(number) for number in numbers]\n",
+        "# notera att vi omedelbart delar upp vår input på mellanslag, således assignas variabeln numbers till en lista\n",
         "\n",
-        "sum = 0\n",
+        "numbers = input(\"Ange några tal separerade med mellanslag: \").split(' ')\n",
         "\n",
-        "for number in numbers:\n",
-        "    sum += number\n",
+        "print(f'Efter vår split assignades variabeln numbers följande lista: {numbers}')\n",
+        "\n",
+        "# vi vet att input från användaren kommer ha datatypen string, låt oss därför skapa en ny lista där vi omvandlar inputen till float\n",
+        "\n",
+        "numbers_as_float = [float(number) for number in numbers]\n",
+        "\n",
+        "summa = 0                                        # här kommer vi att summera ihop alla tal användaren angett\n",
+        "\n",
+        "for number in numbers_as_float:                  # loopa genom alla talen i listan numbers_as_float\n",
+        "    summa += number                              # och addera de till summa\n",
         "\n",
         "mean = sum/len(numbers)\n",
-        "print(f\"Medelvärdet av dina tal är {mean:.1f}\")"
+        "print(f'Medelvärdet av dina tal är {mean}')"
       ]
     },
     {
@@ -231,7 +340,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.11.4"
     },
     "vscode": {
       "interpreter": {
