--- a/code_alongs/L05_strings.ipynb
+++ b/code_alongs/L05_strings.ipynb
@@ -10,6 +10,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "user_input = input ('hej')\n",
+        "\n",
+        "print (user_input)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -18,17 +29,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Ali Leylani\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "firstname = 'Ali'\n",
         "lastname = 'Leylani'\n",
@@ -59,25 +62,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "4-37tOYEVKlV",
         "outputId": "2db41d42-2ab1-4094-bb4f-5134ff18cfb7"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Namn:       Ali Leylani\n",
-            "Ålder:      33\n",
-            "Profession: AI Expert\n",
-            "Adress:     Norra Parkpromenaden 23\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "firstname = 'Ali'\n",
         "lastname = 'Leylani'\n",
@@ -117,25 +107,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "jOZYIsD_VKlW"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Veckomeny\n",
-            "Må: Chili sin carne \n",
-            "Ti: Nudlar \n",
-            "On: Pokebowl \n",
-            "To: Pannkakor \n",
-            "Fr: Tacos \n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "meny = [\"Chili sin carne\", \"Nudlar\", \"Pokebowl\", \"Pannkakor\", \"Tacos\"]\n",
         "days = [\"Må\", \"Ti\", \"On\", \"To\", \"Fr\"]\n",
@@ -171,23 +147,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "TnQo8BuWVKlX"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "quote[0]               : !\n",
-            "quote[5:10]            : e - i\n",
-            "quote[-4]              : T\n",
-            "quote[-4:]             : True\n",
-            "Backwards quote[::-1]  : eurT s'ti esuaceb ynnuf s'ti - eslaF!\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Notera att vi måste vara försiktiga med vilka citat-tecken vi använder. I vår text använder vi redan ', och måste därför använda \" som yttre citattecken\n",
         "\n",
@@ -223,17 +187,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "['Math', 'biology', '  cHeMistry  ', '  PrOgramming      ']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "subjects = 'Math,biology,  cHeMistry  ,  PrOgramming      '\n",
         "\n",
@@ -273,20 +229,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "Ylt_qR7xVKla"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Efter vår split assignades variabeln numbers följande lista: ['5', '10', '30']\n",
-            "Medelvärdet av dina tal är 5.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# notera att vi omedelbart delar upp vår input på mellanslag, således assignas variabeln numbers till en lista\n",
         "\n",
