--- a/exercises/solutions/05_strings_solutions.ipynb
+++ b/exercises/solutions/05_strings_solutions.ipynb
@@ -378,7 +378,7 @@
         "\n",
         "    print(f'Krypterade versionen av {ord_att_kryptera} är {krypterat_ord}')\n",
         "\n",
-        "elif intention == 'D':              # utför lösningen i a) om använder väljer att kryptera\n",
+        "elif intention == 'D':              # utför lösningen i b) om använder väljer att kryptera\n",
         "\n",
         "    ord_att_dekryptera = input('Vilket ord vill du dekryptera? Skriv endast med små bokstäver: ')\n",
         "\n",
