--- a/code_alongs/L04_lists_comprehension.ipynb
+++ b/code_alongs/L04_lists_comprehension.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Låt oss skapa en djupare förståelse av vad en list comprehension faktiskt gör."
+    "List comprehensions är en av de mest kraftfulla verktygen som finns i Python, och tillåter dig som användare att på ett mycket kompakt sätt utföra både enkla och komplexa operationer/beräkningar.\n",
+    "\n",
+    "Låt oss därför skapa en djupare förståelse av vad en list comprehension faktiskt gör.\n",
+    "\n",
+    "Enklast blir om vi börjar med ett exempel:"
    ]
   },
   {
@@ -29,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Låt oss först göra detta med en for-loop"
+    "Låt oss först se hur man kan göra detta med en for-loop"
    ]
   },
   {
@@ -55,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Men observera nu följande kod (tekniken kallas för list comprehension)"
+    "Men observera nu följande kodsnutt (som kallas list comprehension)"
    ]
   },
   {
@@ -64,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_values_list_comprehended = [x+2 for x in range(-5,6)]\n",
+    "y_values_list_comprehended = [x+2 for x in range(-5,6)]        # detta är en list comprehension\n",
     "\n",
     "print(y_values_list_comprehended)"
    ]
