--- a/exercises/06_functions_exercise.ipynb
+++ b/exercises/06_functions_exercise.ipynb
@@ -97,7 +97,7 @@
         "\n",
         "&nbsp; a) &nbsp;  $f(x) = x^2 -3$ (*)\n",
         "\n",
-        "&nbsp; b) &nbsp; $g(x) = 4x-7$ (*)\n",
+        "&nbsp; b) &nbsp; $g(x) = 2x$ (*)\n",
         "\n",
         "What could the relation between $f(x)$ and $g(x)$ be?\n",
         "\n",
