--- a/exercises/06_functions_exercise.ipynb
+++ b/exercises/06_functions_exercise.ipynb
@@ -97,36 +97,9 @@
         "\n",
         "&nbsp; a) &nbsp;  $f(x) = x^2 -3$ (*)\n",
         "\n",
-        "&nbsp; b) &nbsp; $g(x) = 2x$ (*)\n",
+        "&nbsp; b) &nbsp; $g(x) = 4x - 7$ (*)\n",
         "\n",
-        "What could the relation between $f(x)$ and $g(x)$ be?\n",
-        "\n",
-        "<details>\n",
-        "\n",
-        "<summary>Hint</summary>\n",
-        "Use numpy's linspace function:\n",
-        "\n",
-        "```python\n",
-        "import numpy as np\n",
-        "x = np.linspace(-10,10)\n",
-        "```\n",
-        "\n",
-        "[Derivative video][derivative_video] (Swedish)\n",
-        "\n",
-        "[Derivative of polynomials][derivative_polynomial] (Swedish)\n",
-        "\n",
-        "[derivative_video]: https://www.youtube.com/watch?v=hzXJxOXkU_M\n",
-        "[derivative_polynomial]: https://www.youtube.com/watch?v=dFnro1sBn1Y\n",
-        "\n",
-        "</details>\n",
-        "<br>\n",
-        "<details>\n",
-        "\n",
-        "<summary>Answer</summary>\n",
-        "\n",
-        "<img align=\"left\" src=\"../assets/functions_graph.png\" width=\"200\"/>\n",
-        "\n",
-        "</details>\n"
+        "Do the graphs cross each other at some point?\n"
       ]
     },
     {
