--- a/code_alongs/L06_functions.ipynb
+++ b/code_alongs/L06_functions.ipynb
@@ -573,6 +573,87 @@
    "source": [
     "___\n",
     "\n",
+    "Return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ni kan assigna OUTPUTEN från funktioner till variabler genom att lägga till en return i slutet av er funktion\n",
+    "\n",
+    "Det ni returnar är det som variabeln kommer bli assignad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_area(bas, höjd):\n",
+    "\n",
+    "    area = bas*höjd/2\n",
+    "\n",
+    "    return area"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_answer = calculate_area(10, 2)        # här kommer my_answer bli assignad värdet för area\n",
+    "print(my_answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_area(bas, höjd):\n",
+    "\n",
+    "    area = bas*höjd/2\n",
+    "\n",
+    "    return 50000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_answer = calculate_area(10, 2)\n",
+    "\n",
+    "print(my_answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "\n",
     "*args"
    ]
   },
@@ -617,6 +698,23 @@
    ],
    "source": [
     "my_greeter('ali', 'torsten', 'ilse')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "calculate_area(10, 2)"
    ]
   },
   {
