--- a/exercises/06_functions_exercise.ipynb
+++ b/exercises/06_functions_exercise.ipynb
@@ -103,6 +103,82 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def f(x):\n",
+        "\n",
+        "    value = x**2 - 3\n",
+        "\n",
+        "    return value\n",
+        "\n",
+        "def g(x):\n",
+        "\n",
+        "    value = 4*x - 7\n",
+        "\n",
+        "    return value"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "f_values = []\n",
+        "g_values = []\n",
+        "x_values = []\n",
+        "\n",
+        "for x in range(-10, 11):\n",
+        "\n",
+        "    x_values.append(x)\n",
+        "\n",
+        "    f_answer = f(x)\n",
+        "    g_answer = g(x)\n",
+        "\n",
+        "    f_values.append(f_answer)\n",
+        "    g_values.append(g_answer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "plt.plot(x_values, f_values)\n",
+        "plt.plot(x_values, g_values)\n",
+        "plt.title('Mina Grafer')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Alternativt kan vi skapa ovan listor att plotta med **list comprehensions**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "f_values = [f(x) for x in range(-10, 11)]\n",
+        "g_values = [g(x) for x in range(-10, 11)]\n",
+        "x_values = [x for x in range(-10, 11)]\n",
+        "\n",
+        "\n",
+        "print(x_values)\n",
+        "print(f_values)\n",
+        "print(g_values)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "oDD5-Sy3Rji0"
@@ -196,7 +272,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.11.4"
     },
     "vscode": {
       "interpreter": {
