--- a/exercises/solutions/06_functions_solutions.ipynb
+++ b/exercises/solutions/06_functions_solutions.ipynb
@@ -122,6 +122,117 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**a)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import math\n",
+        "\n",
+        "def euclidian(p1, q1, p2, q2):\n",
+        "\n",
+        "    distance = math.sqrt( (p1-q1)**2 + (p2-q2)**2)\n",
+        "    print(distance)    "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**b)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "p1 = float(input('ange p1: '))\n",
+        "q1 = float(input('ange q1: '))\n",
+        "p2 = float(input('ange p2: '))\n",
+        "q2 = float(input('ange q2: '))\n",
+        "\n",
+        "euclidian(p1, q1, p2, q2)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "**c)**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "(10, 3), (-1, -9), (10, -10), (4, -2), (9, -10)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[10, 3]\n",
+            "10 3\n",
+            "10.44030650891055\n",
+            "\n",
+            "[-1, -9]\n",
+            "-1 -9\n",
+            "9.055385138137417\n",
+            "\n",
+            "[10, -10]\n",
+            "10 -10\n",
+            "14.142135623730951\n",
+            "\n",
+            "[4, -2]\n",
+            "4 -2\n",
+            "4.47213595499958\n",
+            "\n",
+            "[9, -10]\n",
+            "9 -10\n",
+            "13.45362404707371\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "p1 = 0\n",
+        "p2 = 0\n",
+        "\n",
+        "for point in [ [10, 3], [-1, -9], [10, -10], [4, -2], [9, -10 ] ]:\n",
+        "\n",
+        "    print(point)\n",
+        "    q1 = point[0]\n",
+        "    q2 = point[1]\n",
+        "\n",
+        "    print(q1, q2)\n",
+        "    euclidian(p1, q1, p2, q2)\n",
+        "    print()\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Je3hvdMsRji0"
@@ -136,34 +247,7 @@
         "\n",
         "&nbsp; b) &nbsp; $g(x) = 4x-7$ (*)\n",
         "\n",
-        "What could the relation between $f(x)$ and $g(x)$ be?\n",
-        "\n",
-        "<details>\n",
-        "\n",
-        "<summary>Hint</summary>\n",
-        "Use numpy's linspace function:\n",
-        "\n",
-        "```python\n",
-        "import numpy as np\n",
-        "x = np.linspace(-10,10)\n",
-        "```\n",
-        "\n",
-        "[Derivative video][derivative_video] (Swedish)\n",
-        "\n",
-        "[Derivative of polynomials][derivative_polynomial] (Swedish)\n",
-        "\n",
-        "[derivative_video]: https://www.youtube.com/watch?v=hzXJxOXkU_M\n",
-        "[derivative_polynomial]: https://www.youtube.com/watch?v=dFnro1sBn1Y\n",
-        "\n",
-        "</details>\n",
-        "<br>\n",
-        "<details>\n",
-        "\n",
-        "<summary>Answer</summary>\n",
-        "\n",
-        "<img align=\"left\" src=\"../assets/functions_graph.png\" width=\"200\"/>\n",
-        "\n",
-        "</details>\n"
+        "Do the graphs cross each other at some point?"
       ]
     },
     {
