--- a/exercises/solutions/06_functions_solutions.ipynb
+++ b/exercises/solutions/06_functions_solutions.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -58,18 +58,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "10.0\n",
-            "2.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "base = float(input('Ge oss basen av triangeln: '))\n",
         "height = float(input('Ge oss höjden av triangeln: '))\n",
@@ -122,13 +113,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -137,7 +121,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -158,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -187,44 +171,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "[10, 3]\n",
-            "10 3\n",
-            "10.44030650891055\n",
-            "\n",
-            "[-1, -9]\n",
-            "-1 -9\n",
-            "9.055385138137417\n",
-            "\n",
-            "[10, -10]\n",
-            "10 -10\n",
-            "14.142135623730951\n",
-            "\n",
-            "[4, -2]\n",
-            "4 -2\n",
-            "4.47213595499958\n",
-            "\n",
-            "[9, -10]\n",
-            "9 -10\n",
-            "13.45362404707371\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "p1 = 0\n",
         "p2 = 0\n",
         "\n",
         "for point in [ [10, 3], [-1, -9], [10, -10], [4, -2], [9, -10 ] ]:\n",
         "\n",
-        "    print(point)\n",
-        "    q1 = point[0]\n",
+        "    print(point) \n",
+        "    q1 = point[0]              \n",
         "    q2 = point[1]\n",
         "\n",
         "    print(q1, q2)\n",
@@ -248,6 +205,83 @@
         "&nbsp; b) &nbsp; $g(x) = 4x-7$ (*)\n",
         "\n",
         "Do the graphs cross each other at some point?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def f(x):\n",
+        "\n",
+        "    value = x**2 - 3\n",
+        "\n",
+        "    return value\n",
+        "\n",
+        "def g(x):\n",
+        "\n",
+        "    value = 4*x - 7\n",
+        "\n",
+        "    return value"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "f_values = []\n",
+        "g_values = []\n",
+        "x_values = []\n",
+        "\n",
+        "for x in range(-10, 11):\n",
+        "\n",
+        "    x_values.append(x)\n",
+        "\n",
+        "    f_answer = f(x)\n",
+        "    g_answer = g(x)\n",
+        "\n",
+        "    f_values.append(f_answer)\n",
+        "    g_values.append(g_answer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "plt.plot(x_values, f_values)\n",
+        "plt.plot(x_values, g_values)\n",
+        "plt.title('Mina Grafer')\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Alternativt kan vi skapa ovan listor att plotta med **list comprehensions**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "f_values = [f(x) for x in range(-10, 11)]\n",
+        "g_values = [g(x) for x in range(-10, 11)]\n",
+        "x_values = [x for x in range(-10, 11)]\n",
+        "\n",
+        "\n",
+        "print(x_values)\n",
+        "print(f_values)\n",
+        "print(g_values)"
       ]
     },
     {
