--- a/code_alongs/L06_functions.ipynb
+++ b/code_alongs/L06_functions.ipynb
@@ -247,11 +247,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ali\n"
+     ]
+    }
+   ],
    "source": [
-    "print('ali')"
+    "print('ali') # om vi inte explicit anger ett värde för end, kommer Python använda sitt default värde"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vi kan skriva över default value genom att direkt ange argumentet "
    ]
   },
   {
@@ -264,11 +279,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "När vi definierar en funktion kan vi ge ett av argumenten default value genom att direkt ange ett värde"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# nu har argumentet name default value 'friend'\n",
+    "\n",
     "def say_hello(name='friend'):\n",
     "\n",
     "    print(name)"
@@ -276,19 +301,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "friend\n"
+     ]
+    }
+   ],
    "source": [
+    "# vi behöver således inte ange ett värde för argumentet name när vi kallar på funktionen, eftersom att den då istället kommer använda sitt default value\n",
+    "\n",
     "say_hello()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ali\n"
+     ]
+    }
+   ],
    "source": [
+    "# vi kan direkt byta värdet på argumentet name genom att explicit ange ett värde när vi kallar på funktionen, då kommer default värde att skrivas över med det \n",
+    "# värdet som vi anger. I detta fall skriver vi över default värdet 'friend' med 'ali'\n",
+    "\n",
     "say_hello(name='ali')"
    ]
   },
@@ -296,15 +342,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Blanda argument med och utan default values"
+    "## Vi kan definiera funkioner med argument med & utan default values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# nedan skapar vi en funktion som multiplicerar sina tre argument. argumentet z har vi gett ett default value\n",
+    "\n",
     "def multiplikation(x, y , z = 10):\n",
     "\n",
     "    print(f'x={x}')\n",
@@ -318,19 +366,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x=2\n",
+      "y=3\n",
+      "z=10\n",
+      "60\n"
+     ]
+    }
+   ],
    "source": [
+    "# eftersom att z har ett default value, behöver vi inte ange något värde för den\n",
+    "\n",
     "multiplikation(x=2, y=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x=2\n",
+      "y=3\n",
+      "z=20\n",
+      "120\n"
+     ]
+    }
+   ],
    "source": [
+    "# vi kan, om vi vill, givetvis ändra på default värdet på z genom att direkt ange ett värde för z när vi kallar på funktionen\n",
+    "\n",
     "multiplikation(x=2, y=3, z=20)"
    ]
   },
